[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ravi Gupta <ravi9235705910@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.18.1"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
